fix extra margin bug

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@ html,
 body {
     height: 100%;
     margin: 0;
+    overflow-x: hidden;
 }
 
 a:link,
@@ -16,12 +17,12 @@ a:visited {
 
 #landing {
     background-image: url(/images/light-bulb.jpg);
-    background-size: cover;
-    height: 100%;
+    height: 700px;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    margin: 0;
+    padding-top: 30px;
 }
 
 .map-page {
